--- a/masonry.html
+++ b/masonry.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-520-highway
         <div class="container-fluid">
             <div class="masonry">
                 <div class="item first-item col-md-4 col-sm-6 col-xs-12">
-                  <a href="img/big_portfolio_item_1.png" data-lightbox="image-1"><div class="thumb">
+                  <a href="image/1.png" data-lightbox="image-1"><div class="thumb">
                       <div class="hover-effect">
                           <div class="hover-content">
                               <h1>Succulents <em>chambray</em></h1>
@@ -67,12 +67,12 @@ https://templatemo.com/tm-520-highway
                           </div>
                       </div>
                       <div class="image">
-                          <img src="img/masonry_item_1.png">
+                          <img src="image/1.png">
                       </div>
                   </div></a>
-                </div>
+                </div>               
                 <div class="item col-md-4 col-sm-6 col-xs-12">
-                  <a href="img/big_portfolio_item_2.png" data-lightbox="image-1"><div class="thumb">
+                  <a href="image/2.png" data-lightbox="image-1"><div class="thumb">
                       <div class="hover-effect">
                           <div class="hover-content">
                               <h1>Biodiesel <em>squid</em></h1>
@@ -80,12 +80,12 @@ https://templatemo.com/tm-520-highway
                           </div>
                       </div>
                       <div class="image">
-                          <img src="img/masonry_item_2.png">
+                          <img src="image/2.png">
                       </div>
                   </div></a>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
-                  <a href="img/big_portfolio_item_3.png" data-lightbox="image-1"><div class="thumb">
+                  <a href="image/3.png" data-lightbox="image-1"><div class="thumb">
                       <div class="hover-effect">
                           <div class="hover-content">
                               <h1>raclette <em>taxidermy</em></h1>
@@ -93,12 +93,12 @@ https://templatemo.com/tm-520-highway
                           </div>
                       </div>
                       <div class="image">
-                          <img src="img/masonry_item_3.png">
+                          <img src="image/3.png">
                       </div>
                   </div></a>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
-                  <a href="img/big_portfolio_item_5.png" data-lightbox="image-1"><div class="thumb">
+                  <a href="image/4.png" data-lightbox="image-1"><div class="thumb">
                       <div class="hover-effect">
                           <div class="hover-content">
                               <h1>freegan <em>aesthetic</em></h1>
@@ -106,7 +106,7 @@ https://templatemo.com/tm-520-highway
                           </div>
                       </div>
                       <div class="image">
-                          <img src="img/masonry_item_4.png">
+                          <img src="image/4.png">
                       </div>
                   </div></a>
                 </div>
