--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>About Highway - Free CSS Template</title>
+        <title>About our love story</title>
 <!-- 
 
 Highway Template
@@ -40,7 +40,7 @@ https://templatemo.com/tm-520-highway
     <div class="page-heading">
         <div class="container">
             <div class="heading-content">
-                <h1>About <em>Us</em></h1>
+                <h1>About our lovestory</h1>
             </div>
         </div>
     </div>
@@ -254,25 +254,13 @@ https://templatemo.com/tm-520-highway
           <div class="main-menu">
               <ul>
                   <li>
-                      <a href="index.html">Home - Full-width</a>
-                  </li>
-                  <li>
-                      <a href="masonry.html">Home - Masonry</a>
-                  </li>
-                  <li>
-                      <a href="grid.html">Home - Small-width</a>
+                      <a href="index.html">Home</a>
                   </li>
                   <li>
                       <a href="about.html">About Us</a>
                   </li>
-                  <li>
-                      <a href="blog.html">Blog Entries</a>
-                  </li>
-                  <li>
-                      <a href="single-post.html">Single Post</a>
-                  </li>
               </ul>
-              <p>We create awesome templates for you</p>
+              <p>DKS & GL</p>
           </div>
         </div>
       </div>
