--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-520-highway
             </div>
         </div>
         <video autoplay="" loop="" muted>
-        	<source src="highway-loop.mp4" type="video/mp4" />
+        	<source src="video.mp4" type="video/mp4" />
         </video>
     </div>
 
@@ -72,8 +72,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/1.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Biodiesel <em>squid</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第一次出去玩</h1>
+                                    <p>pgp赛车，咱两打平</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -87,8 +87,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/2.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>raclette <em>taxidermy</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第一次去旅游</h1>
+                                    <p>海很蓝，天很亮，你很美</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -102,8 +102,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/3.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>humblebrag <em>brunch</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第一次与你做邮轮</h1>
+                                    <p>啵啵</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -117,8 +117,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="iimage/4.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Succulents <em>chambray</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>邮轮2</h1>
+                                    <p>mua</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -132,8 +132,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/5.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>freegan <em>aesthetic</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>你说想去游乐园</h1>
+                                    <p>说走就走</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -147,8 +147,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/6.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>taiyaki <em>vegan</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>我也好久没做过旋转木马</h1>
+                                    <p>两个憨憨</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -162,8 +162,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/10.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>Thundercats <em>santo</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>半周年快乐</h1>
+                                    <p>Kerry park真的很美，不后悔第一次约会就带你去</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -177,8 +177,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/8.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>wayfarers <em>yuccie</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>两个憨憨</h1>
+                                    <p>你si不si傻</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -192,8 +192,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/9.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>半周年2</h1>
+                                    <p>人来人往，你却在我心里住下</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -207,8 +207,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/11.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>Portland之旅</h1>
+                                    <p>巴适得板</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -222,8 +222,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/12.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>Portland 2</h1>
+                                    <p>好吃好玩</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -237,8 +237,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/13.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>樱花季</h1>
+                                    <p>我变胖了，你还是那么美</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -252,8 +252,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/14.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第一次“艺术照”</h1>
+                                    <p>好看</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -267,8 +267,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/15.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>这次是一个憨憨</h1>
+                                    <p>我要飞的更高</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -282,8 +282,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/16.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>一周年</h1>
+                                    <p>不忘初心</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -297,8 +297,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/17.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>在天台的安慰</h1>
+                                    <p>西雅图好美，我们聊了很多</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -312,8 +312,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/18.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>喝酒🍺</h1>
+                                    <p>还挺能喝哈哈哈哈</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -327,8 +327,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/20.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>你和🐻</h1>
+                                    <p>比你还高</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -342,8 +342,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/21.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>我觉得最好看的一张</h1>
+                                    <p>不得不爱</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -357,8 +357,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/22.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第一次带你去滑雪</h1>
+                                    <p>你还想去第二次吗哈哈哈哈哈</p>
                                 </div>
                             </div></a>
                             <div class="image">
@@ -372,8 +372,8 @@ https://templatemo.com/tm-520-highway
                         <div class="thumb">
                             <a href="image/23.png" data-lightbox="image-1"><div class="hover-effect">
                                 <div class="hover-content">
-                                    <h1>disrupt <em>street</em></h1>
-                                    <p>Awesome Subtittle Goes Here</p>
+                                    <h1>第n次约会</h1>
+                                    <p>未来还有n次</p>
                                 </div>
                             </div></a>
                             <div class="image">
